# digicop-rag

./: .gitignore  LIMITATIONS.md  alembic.ini  pyproject.toml
pipeline/: run.py
pipeline/chunking/: chunker.py  splitter.py
pipeline/embedding/: base.py  bgeM3_embedder.py
pipeline/extraction/: base.py  docling_extractor.py
pipeline/indexing/: qdrant_writer.py
pipeline/persistence/: models.py  postgres_writer.py
pipeline/persistence/migrations/: env.py
pipeline/persistence/migrations/versions/: 3162f3648d59_create_initial_tables.py
shared/: config.py  models.py  tokenizer.py
tests/pipeline/: fake_embedder.py  test_chunker.py  test_docling_extractor.py  test_embedder.py  test_extractor_contract.py  test_postgres_writer.py  test_qdrant_writer.py  test_urdu_qdrant_writer.py
