[project]
name = "digicop-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.106.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:docling",
    "ignore::DeprecationWarning:importlib",
]