[project]
name = "digicop-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "docling>=2.106.0",
    "fastembed>=0.8.0",
    "flagembedding>=1.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pytest-asyncio>=1.4.0",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:docling",
    "ignore::DeprecationWarning:importlib",
]
